feat: Integrate RabbitMQ and Update Docker Compose Configuration
- Integrated RabbitMQ into the notification service to handle messaging.
- Updated the `NotificationController` to send messages to RabbitMQ asynchronously.
- Modified `NotificationServiceImpl` to remove Kafka dependencies and rely solely on RabbitMQ.
- Adjusted `application.yml` to include RabbitMQ configuration (host, port, username, and password).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.8'
 
 services:
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"  # RabbitMQ AMQP port
+      - "15672:15672"  # RabbitMQ Management UI port
+
   mongo:
     image: mongo:latest
     container_name: mongo
@@ -37,8 +44,11 @@ services:
       - SPRING_DATA_MONGODB_URI=mongodb://mongo:27017/notificationdb
       - SERVER_PORT=8081
       - MANAGEMENT_SERVER_PORT=9091
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_RABBITMQ_PORT=5672
     depends_on:
       - mongo
+      - rabbitmq
 
 volumes:
   mongo-data:
