--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: ${SPRING_DATA_MONGODB_URI:mongodb://127.0.0.1:27017/notificationdb} # Use the Docker MongoDB service name
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://43.204.210.161:27017/notificationdb} # Use the Docker MongoDB service name
 
   rabbitmq:
     host: ${SPRING_RABBITMQ_HOST:localhost} # Use Docker service name for RabbitMQ
@@ -22,3 +22,11 @@ management:
       show-details: always
   server:
     port: ${MANAGEMENT_SERVER_PORT:9091} # Default to 9091
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui/index.html
+    try-it-out-enabled: true
+    filter: true
